style.css
body
{
    font-family: "Cabin";
    font-size: 1.1vw;

    color: #011936;
    margin: 0pt;

    max-width: 100%;
    overflow-x: hidden;
}

h1
{
    font-family: "Indie Flower";
    font-size: 9vw;
    margin-bottom: 0px;
}

h2
{
    font-family: "IBM Plex Mono";
    font-size: 1.4vw;
    width: fit-content;
    height: fit-content;
}

a
{
    text-decoration: none;
    color: #551A8B;
}

#main-page
{
    position: absolute;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.card
{
    overflow: visible;
    align-self: center;
}

.dino
{
    background-image: url("/dino.png");
    background-size: contain;
    background-repeat: no-repeat;
}

#cards-container
{
    display: flex;
    align-items: center;
    width: 100%;
    height: 100%;

    transition: transform 1.5s ease;
}

#hello-card
{
    display: grid;
    justify-content: left;
    align-items: center
}

.hello-text
{
    grid-column-start: 1;
    grid-row-start: 1;
    grid-row-end: 3;
    height: 100%;
    margin: 0 13vw;
}

.hello-title
{
    margin: 0;
}

.house-container
{
    position: relative;
    display: flex;
    grid-column-start: 2;
    grid-row-start: 2;
    bottom: 0;
    overflow: visible;
    z-index: 10;

    transition: transform 1.5s ease;
}

.house
{
    width: 7vw;
    height: 7vw;
    position: absolute;
}

.house-side
{
    width: 3.5vw;
    height: 7vw;
}

.house-top
{
    width: 2.5vw;
    height: 3vw;
}

.right-side
{
    width: 1vw;
    z-index: 5;
    background-color: black;
}

.left-side
{
    z-index: 20;
    background-color: black;
}

#hello-dino
{
    width: 4vw;
    height: 3.8vw;
    transform: scaleX(-1);

    position: absolute;
    left: 8vw;
    bottom: 0;
    z-index: 10;

    transition: left 1.5s ease;
}

#down-arrow
{
    position: absolute;
    left: 50%;
    bottom: 15%;
    animation: 1s ease 0s infinite floating 
}

@keyframes floating
{
    from
    {
        bottom: 15%;
    }

    50%
    {
        bottom: calc(15% + 10px);
    }

    to
    {
        bottom: 15%;
    }
}

#about-card
{
    display: grid;
    justify-content: space-around;
    align-items: center;

    width: 100%;
    height: 100%;
    margin: 0;
    position: absolute;
    overflow: hidden;
}

.about-desc
{
    width: 100%;
    grid-column-start: 2;
    grid-column-end: 3;

    margin-left: 60vw;
    margin-right: -60vw;

    transition: margin 1.5s ease;
}

#about-dino
{
    width: 35vw;
    height: 35vw;
    bottom: 0;
    grid-column-start: 1;

    margin-left: -30vw;
    margin-right: 30vw;

    transition: margin 1.5s ease;
}

#projects-card
{
    width: 100%;
    height: 100%;
    margin: 0;
    position: absolute;
    text-align: center;
}

#projects-card h1
{
    transition: margin 1.5s ease;
}

#projects-card a
{
    display: block;
}

